--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -58,3 +58,8 @@ body {
 .btn-primary {
   @apply font-bold py-2 px-4 rounded bg-blue-500;
 }
+
+.btn-secondary {
+  @apply font-bold py-2 px-4 rounded
+  background-color: #E61F5C;
+}
