--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -60,6 +60,6 @@ body {
 }
 
 .btn-secondary {
-  @apply font-bold py-2 px-4 rounded
-  background-color: #E61F5C;
+  @apply font-bold py-2 px-4 rounded;
+  background-color: #e61f5c;
 }
